--- a/sde_design/skin6/_sp/apps/layout/header/mh_header/header.css
+++ b/sde_design/skin6/_sp/apps/layout/header/mh_header/header.css
@@ -1,4 +1,3 @@
-
 /*
 	헤더 / 로고부
     <div class="sp-header-logo" module="bannermanage2_display_1" scope="top">
@@ -6,6 +5,7 @@
         <a href="/" {$target} class="after displaynone" scope="{$title}">{$banner}</a>
     </div>
 */
+
 #sp-header-design-1 {  }
 #sp-header-design-1 .sp-header-box { position:relative; }
 #sp-header-design-1 .sp-header-logo { width:100%; margin:0 auto; text-align:center; }
@@ -43,40 +43,60 @@
 #sp-header-design-1 .sp-slider-keyword:hover i:before,
 #sp-header-design-1 .slick-current + .slick-active .sp-slider-keyword i:before { background:#912b45; color:#fff; }
 
+.main_header {
+	position:absolute;
+	width:100%;
+	min-width:1200px;
+	height: 200px;
+	border-bottom: 1px solid #e6e6e6;
+	background: #fff;
+	z-index:1000;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all 100ms ease-in-out;
+	-moz-transition: all 100ms ease-in-out;
+	-o-transition: all 100ms ease-in-out;
+	transition: all 100ms ease-in-out;
+}
 .header_links {
-	position: absolute;
-	text-align: right;
-	top: 10px;
-	right: 60px;
+	position: relative;
+	width: 100%;
+	padding: 0 50px;
+}
+.header_links:after {
+	display: block;
+	content: "";
+	clear: both;
+}
+.header_links ul.left {
+	float: left;
+}
+.header_links ul .oversea a {
+	color: #6abccb;
+	font-weight: 700;
+}
+.header_links ul.right {
+	float: right;
 }
 .header_links li {
 	float:left;
 }
-.header_links li.oversea {
-	margin-right: 10px;
-	background: url("/image/common/oversea.png") no-repeat;
-	background-position: top 10px center;
-	background-size: 30px;
-}
-.header_links li.oversea a {
-	font-weight: bold;
-	color:#6abccb !important;
-	padding:40px 10px 20px;
-}
 .header_links a {
-	display:inline-block;
-	padding:30px 10px;
-	color:#fff;
-	font-size:11px;
-	font-family:'Roboto','NanumGothic','Open Sans','PT Sans','malgun gothic','돋움',Dotum,Helvetica,'Apple SD Gothic Neo',Sans-serif;
-	cursor:pointer;
+	display: inline-block;
+	line-height: 20px;
+	font-size: 11px;
+	font-family: 'Roboto','NanumGothic', Sans-serif;
+	color: #212121;
+	cursor: pointer;
+	padding: 15px 10px;
 }
 .main_header.active .header_links a:hover {
 	font-weight:900;
 }
+
 .mh_header_coupon {
 	position:relative;
-
 }
 .mh_header_coupon a {
 	padding-right:30px;
@@ -107,27 +127,23 @@ color: #fff;
 }
 .join_count {
 	position: absolute;
-	top: 0;
+	bottom: -15px;
 	left: -10px;
 	width: 80px;
 	height: 23px;
 	line-height: 23px;
-	background: #fff;
+	color: #fff;
+	background: #212121;
 	border-radius: 5px;
 	font-weight: bold;
 	font-size: 10px;
 	letter-spacing: 0;
 	text-align: center;
-	color: rgb(51,51,51);
 	filter: alpha(opacity=100);
 	opacity: 1;
 	-webkit-opacity: 1;
 	transition: all .2s .2s ease;
 	-webkit-transition: all .2s .2s ease;
-}
-.main_header.active .join_count {
-	color: #fff;
-	background: rgb(51,51,51);
 }
 .header_links .header_icon a {
 	padding: 23px 20px;
@@ -194,25 +210,12 @@ color: #fff;
 
 	filter: alpha(opacity=40);*/
 }
-.main_header {
-	position:absolute;
-	width:100%;
-	min-width:1260px;
-	height:90px;
-    background: #212121;
-	z-index:1000;
-	-webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    -webkit-transition: all 200ms ease-in-out;
-    -moz-transition: all 200ms ease-in-out;
-    -o-transition: all 200ms ease-in-out;
-    transition: all 200ms ease-in-out;
-}
+
 
 .main_header .menu {
-	width: 1000px;
-    margin: 25px auto;
+	width: 1200px;
+	text-align: center;
+    margin: 0 auto;
 }
 .main_header .menu > li {
 	display:inline-block;
@@ -221,12 +224,12 @@ color: #fff;
 .main_header .menu > li > a {
 	display:block;
 	min-width:55px;
-	height:40px;
-	line-height:40px;
+	height:50px;
+	line-height:50px;
 	font-size:16px;
 	font-family: "roboto", "Nanum Gothic", sans-serif;
 	font-weight:900;
-	color:#fff;
+	color:#212121;
 	cursor:pointer;
 	-webkit-transition: all 200ms ease-in-out;
     -moz-transition: all 200ms ease-in-out;
@@ -266,16 +269,16 @@ color: #fff;
 	height:0;
 	margin-top:10px;
 	opacity: 0;
-}
-.main_header .menu ul.active {
-	display:block;
-	height:220px;
-	opacity: 1;
     -webkit-transition:  all 200ms ease-in-out;
     -moz-transition:  all 200ms ease-in-out;
     -ms-transition:  all 200ms ease-in-out;
     -o-transition:  all 200ms ease-in-out;
 	transition: all 200ms ease-in-out;
+}
+.main_header .menu ul.active {
+	display:block;
+	height:220px;
+	opacity: 1;
 }
 .main_header .menu ul li:first-child {
 	padding-top:15px;
@@ -301,21 +304,24 @@ color: #fff;
 	font-weight:900;
 	color:#3a5335;
 }
-.main_header h1 {
-    position: absolute;
-    top: 20px;
-    left: 80px;
+.main_header h1.logo {
+	text-align: center;
+	padding-bottom: 29px;
+	border-bottom: 1px solid #e6e6e6;
 }
-.main_header h1 a {
-	display:inline-block;
-	height: 50px;
+.main_header h1.logo a {
+	display: inline-block;
+	height: 70px;
+	-webkit-transition:  all 200ms ease-in-out;
+	-moz-transition:  all 200ms ease-in-out;
+	-ms-transition:  all 200ms ease-in-out;
+	-o-transition:  all 200ms ease-in-out;
+	transition: all 200ms ease-in-out;
 }
-.main_header h1 a img {
+.main_header h1.logo a img {
 	height: 100%;
 }
-.main_header.active h1 a {
-	height: 50px;
-}
+
 .global_menu {
 	width:245px;
     position: absolute;
@@ -360,32 +366,20 @@ color: #fff;
 }
 .main_header.fixed {
 	position:fixed;
-	top:0;
-	left:0;
-	height: 90px;
-	background-color:#3c3c3c;
-    /*box-shadow: 0 0 8px 1px rgba(0,0,0,0.1);
-    -webkit-transition: all 200ms ease-in-out;
-    -moz-transition: all 200ms ease-in-out;
-    -o-transition: all 200ms ease-in-out;
-    transition: all 200ms ease-in-out;*/
+	top: 0;
+	left: 0;
+	height: 100px;
 }
-.main_header.active {
-	color:#3a5335;
-	background-color:#fff;
+.main_header.fixed h1.logo {
+	position: absolute;
+	top: 10px;
+	left: 50%;
+	transform: translateX(-50%);
+	padding: 0;
+	border: none;
 }
-.main_header.active li a {
-	color:#646464;
-}
-.main_header.fixed h1 {
-	top: 20px;
-    left: 80px;
-}
-.main_header.fixed h1 img {
-	height: 100%;
-}
-.main_header.fixed .menu {
-	top: 25px;
+.main_header.fixed h1.logo a {
+	height: 40px;
 }
 
 .main_header.fixed .menu > li a:after {
@@ -423,19 +417,19 @@ color: #fff;
 	left:0;
 }
 .main_header .menu > li a span.active:after {
-	width:100%;
-	left:0;
+	width: 100%;
+	left: 0;
 }
 
 .main_header.active {
-	height:330px;
+	height:380px;
 }
 .main_header.fixed.active {
-	height:320px;
+	height:280px;
 }
 
 .main_header.active .menu ul {
-	height:215px;
+	height: 160px;
     -webkit-transition: all .2s ease;
     -moz-transition: all .2s ease;
     -ms-transition: all .2s ease;
