--- a/sde_design/skin6/css/module/product/3245/listmain_1.css
+++ b/sde_design/skin6/css/module/product/3245/listmain_1.css
@@ -17,9 +17,7 @@
 .mh_main_product_header {padding:150px 0 100px; text-align:center;}
 .mh_main_product_header .title {display:block; color:#000000; font-size:30px; font-weight:600; letter-spacing:-1px; }
 .mh_main_product_header .desc { display:block; padding-top:16px; color:#9c9c9c; font-size:20px; font-weight:300; letter-spacing:-2px;}
-.mh_main_product .prdList li.item .box {
-    background: #f5f5f5;
-}
+/*.mh_main_product .prdList li.item .box { background: #f5f5f5; }*/
 .mh_main_product .prdList li.item .prdImg > a {
     width: 100%;
     height: 100%;
@@ -55,7 +53,7 @@
 }
 .mh_main_product .prdList li.item .xans-product-listitem li:first-child span {
     line-height: 20px;
-    padding: 0px 20px 10px;
+    padding: 0 0 10px;
 }
 .mh_main_product .prdList li.item .xans-product-listitem li span {
     display: block;
