--- a/sde_design/skin6/_sp/apps/layout/header/mh_header/header.css
+++ b/sde_design/skin6/_sp/apps/layout/header/mh_header/header.css
@@ -103,24 +103,20 @@
 }
 
 .mh_header_coupon .count {
-position: absolute;
-width: 20px;
-height: 20px;
-line-height: 20px;
-text-align: center;
-display: inline-block;
-background: #fff;
-color: #333;
-border-radius: 50%;
-top: 26px;
-right:5px;
-font-size: 9px;
-font-weight: bolder;
-font-family:'돋움',Dotum,Helvetica,'Apple SD Gothic Neo',Sans-serif;
-}
-.main_header.active .mh_header_coupon .count {
-background: #3a5335;
-color: #fff;
+	position: absolute;
+	width: 19px;
+	height: 20px;
+	line-height: 19px;
+	text-align: center;
+	display: inline-block;
+	color: #fff;
+	border-radius: 50%;
+	top: 14px;
+	right:3px;
+	padding-right: 1px;
+	font-size: 9px;
+	font-weight: bolder;
+	background: #333;
 }
 .mh_header_join_count {
 	position:relative;
