- 모바일 메인, 리스트, 서치바 수정 - 메인 타이틀 이미지 변경

--- a/sde_design/mobile1/_wg/css/header.css
+++ b/sde_design/mobile1/_wg/css/header.css
@@ -23,8 +23,8 @@
     .header_01 li strong { font-weight:600; }
 
     /* 장바구니 아이콘 */
-    .header_01 li a .count { position:absolute; top:30px; left:50%; width:15%; margin-left:-12%; padding:1px 3px 0; border:1px solid #d01818; background-color:#e52728; border-radius:4px; color:#fff; font-weight:600; font-size:10px; line-height:16px; text-align:center; transition:opacity .8s 1s, top .8s 1s ease; }
-    
+    .header_01 li a .count { position:absolute; top:30px; left:50%; width:15%; margin-left:-12%; padding:1px 3px 2px; background-color:#e52728; border-radius:10px; color:#fff; font-weight:600; font-size:10px; line-height:16px; text-align:center; transition:opacity .8s 1s, top .8s 1s ease; }
+
     /* 움직이는 적립금 아이콘 */
     .header_01 .header_point { position:absolute; z-index:1; top:32px; left:50%; width:55px; height:20px; margin:-2px 0 0 -30px; line-height:20px; background:#212121; border-radius:4px; font-size:10px; font-weight:600; letter-spacing:0; text-align:center; color:#fff; transition:box-shadow 1s, opacity .8s 1s, top .8s 1s ease;}
 
