- 체험단 게시판, 제품 상세페이지, 게시판 자바스크립트

--- a/sde_design/skin6/_sp/apps/layout/product/product-1/product.css
+++ b/sde_design/skin6/_sp/apps/layout/product/product-1/product.css
@@ -359,7 +359,7 @@
 
 	/* 상품 이미지 꾸미기 */
 	.xans-product-imagestyle .prdIcon { z-index:2; position:absolute; width:100px; height:100px; background-repeat:no-repeat; background-size: 100px;}
-	.ec-product-bgLT { top: 10px; left.mh_main_product .prdList li.item .xans-product-listitem li:first-child span: 10px; background-position: center; }
+	.ec-product-bgLT { top: 10px; left: 10px; background-position: center;}
 	.ec-product-bgLC { background-position:left center; }
 	.ec-product-bgLB { background-position:left bottom; }
 	.ec-product-bgRT { top: 10px; right: 10px; background-position: center; }
