--- a/sde_design/skin6/_sp/apps/layout/footer/footer-3/footer.html
+++ b/sde_design/skin6/_sp/apps/layout/footer/footer-3/footer.html
@@ -222,3 +222,13 @@
 	line-height:1.45;
 }
 </style>
+
+<!-- Global site tag (gtag.js) - Google Ads: 660380681 -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-660380681"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+
+	gtag('config', 'AW-660380681');
+</script>
