--- a/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
+++ b/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
@@ -86,7 +86,7 @@
 		<li class="last">
 			<a href="/board/gallery/list.html?board_no=8"><span>이벤트</span></a>
 			<ul>
-				<li><a href="https://moonhillfood.com/board/free/list.html?board_no=1002">체험단 신청 게시판</a></li>
+				<li><a href="https://moonhillfood.com/board/free/list.html?board_no=1002">체험단 신청</a></li>
 			</ul>
 		</li>
 	</ul>
