--- a/sde_design/skin6/_sp/css/base.css
+++ b/sde_design/skin6/_sp/css/base.css
@@ -1,97 +1,109 @@
 
-	@charset "utf-8";
+@charset "utf-8";
 
-	/*
-	html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}button,a{outline:0;}
-	*/
-	body,button,input,label,select,td,textarea {
-		zoom:1;
-		font-size:12px;
-		line-height:1.4em;
-		/*letter-spacing:-0.03em;*/
-		font-family:'Roboto','NanumGothic','Open Sans', 'PT Sans', 'malgun gothic','돋움',Dotum,Helvetica,'Apple SD Gothic Neo',Sans-serif;
-		-webkit-overflow-scrolling: touch;
-		-webkit-font-smoothing: antialiased;
-		-webkit-text-size-adjust: 100%;
-		-ms-text-size-adjust: 100%;
-		text-size-adjust: 100%;
-	}
-	/*::-webkit-scrollbar {width:5px;height:5px;}
-	::-webkit-scrollbar-button {width:0px;height:0px;}
-	::-webkit-scrollbar-thumb {background:#333333;border:0px none #ffffff;border-radius:0px;}
-	::-webkit-scrollbar-thumb:hover {background:#333333;}
-	::-webkit-scrollbar-thumb:active {background:#000000;}
-	::-webkit-scrollbar-track {background:#ccc;border:1px none #ffffff;border-radius:0px;}
-	::-webkit-scrollbar-track:hover {background:#f0f0f0;}
-	::-webkit-scrollbar-track:active {background:#fff;}
-	::-webkit-scrollbar-corner {background:transparent;}*/
-	a{color:#555; text-decoration:none;outline:0;}a:focus,a:active,a:hover{color:#000; text-decoration:none;}
+/*
+html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}button,a{outline:0;}
+*/
+body,button,input,label,select,td,textarea {
+	zoom:1;
+	font-size:12px;
+	line-height:1.4em;
+	/*letter-spacing:-0.03em;*/
+	font-family:'Roboto','NanumGothic','Open Sans', 'PT Sans', 'malgun gothic','돋움',Dotum,Helvetica,'Apple SD Gothic Neo',Sans-serif;
+	-webkit-overflow-scrolling: touch;
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-size-adjust: 100%;
+	-ms-text-size-adjust: 100%;
+	text-size-adjust: 100%;
+}
+/*::-webkit-scrollbar {width:5px;height:5px;}
+::-webkit-scrollbar-button {width:0px;height:0px;}
+::-webkit-scrollbar-thumb {background:#333333;border:0px none #ffffff;border-radius:0px;}
+::-webkit-scrollbar-thumb:hover {background:#333333;}
+::-webkit-scrollbar-thumb:active {background:#000000;}
+::-webkit-scrollbar-track {background:#ccc;border:1px none #ffffff;border-radius:0px;}
+::-webkit-scrollbar-track:hover {background:#f0f0f0;}
+::-webkit-scrollbar-track:active {background:#fff;}
+::-webkit-scrollbar-corner {background:transparent;}*/
+a{color:#555; text-decoration:none;outline:0;}a:focus,a:active,a:hover{color:#000; text-decoration:none;}
 
-	/*html.ie8 * {
-		filter:none !important; 
-		-ms-filter:none !important;
-		-webkit-backface-visibility : unset !important;
-		   -moz-backface-visibility : unset !important;
-			 -o-backface-visibility : unset !important;
-				backface-visibility : unset !important;
-				-webkit-perspective : unset !important;
-				   -moz-perspective : unset !important;
-					 -o-perspective : unset !important;
-						perspective : unset !important;
-				 -webkit-transition : unset !important;
-				  -khtml-transition : unset !important;
-				    -moz-transition : unset !important;
-					 -ms-transition : unset !important;
-					  -o-transition : unset !important;
-						 transition : unset !important;
-				  -webkit-transform : unset !important;
-					 -moz-transform : unset !important;
-					  -ms-transform : unset !important;
-					   -o-transform : unset !important;
-						  transform : unset !important;
-				  -webkit-animation : unset !important;
-					 -moz-animation : unset !important;
-					  -ms-animation : unset !important;
-					   -o-animation : unset !important;
-						  animation : unset !important;
-	}
-	.sp-fix {
-		-webkit-backface-visibility : hidden;
-		   -moz-backface-visibility : hidden;
-			 -o-backface-visibility : hidden;
-				backface-visibility : hidden;
-				-webkit-perspective : 1000;
-				   -moz-perspective : 1000;
-					 -o-perspective : 1000;
-						perspective : 1000;
-			-webkit-transform : translate3d(0,0,0);
-			   -moz-transform : translate3d(0,0,0);
-				-ms-transform : translate3d(0,0,0);
-				 -o-transform : translate3d(0,0,0);
-					transform : translate3d(0,0,0);
-	}
-	*/
-	/*
-		will-change: transform;
-		will-change: opacity;
-		will-change: top, left, bottom, right;
+/*html.ie8 * {
+	filter:none !important;
+	-ms-filter:none !important;
+	-webkit-backface-visibility : unset !important;
+	   -moz-backface-visibility : unset !important;
+		 -o-backface-visibility : unset !important;
+			backface-visibility : unset !important;
+			-webkit-perspective : unset !important;
+			   -moz-perspective : unset !important;
+				 -o-perspective : unset !important;
+					perspective : unset !important;
+			 -webkit-transition : unset !important;
+			  -khtml-transition : unset !important;
+			    -moz-transition : unset !important;
+				 -ms-transition : unset !important;
+				  -o-transition : unset !important;
+					 transition : unset !important;
+			  -webkit-transform : unset !important;
+				 -moz-transform : unset !important;
+				  -ms-transform : unset !important;
+				   -o-transform : unset !important;
+					  transform : unset !important;
+			  -webkit-animation : unset !important;
+				 -moz-animation : unset !important;
+				  -ms-animation : unset !important;
+				   -o-animation : unset !important;
+					  animation : unset !important;
+}
+.sp-fix {
+	-webkit-backface-visibility : hidden;
+	   -moz-backface-visibility : hidden;
+		 -o-backface-visibility : hidden;
+			backface-visibility : hidden;
+			-webkit-perspective : 1000;
+			   -moz-perspective : 1000;
+				 -o-perspective : 1000;
+					perspective : 1000;
+		-webkit-transform : translate3d(0,0,0);
+		   -moz-transform : translate3d(0,0,0);
+			-ms-transform : translate3d(0,0,0);
+			 -o-transform : translate3d(0,0,0);
+				transform : translate3d(0,0,0);
+}
+*/
+/*
+	will-change: transform;
+	will-change: opacity;
+	will-change: top, left, bottom, right;
 
-		-webkit-transition : visibility 0.3s ease, opacity 0.3s ease;
-		 -khtml-transition : visibility 0.3s ease, opacity 0.3s ease;
-		   -moz-transition : visibility 0.3s ease, opacity 0.3s ease;
-			-ms-transition : visibility 0.3s ease, opacity 0.3s ease;
-			 -o-transition : visibility 0.3s ease, opacity 0.3s ease;
-				transition : visibility 0.3s ease, opacity 0.3s ease;
-	*/
-	.sp-box,
-	.sp-box * {
-		-webkit-box-sizing : border-box;
-		 -khtml-box-sizing : border-box;
-		   -moz-box-sizing : border-box;
-		    -ms-box-sizing : border-box;
-		     -o-box-sizing : border-box;
-		        box-sizing : border-box;
-	}
-	.sp-clear:after { clear:both; content:' '; display:block; font-size:0; height:0; line-height:0; visibility:hidden; }
-	.sp-one			{ white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
-	.sp-break		{ white-space:pre-wrap; white-space:-moz-pre-wrap; white-space:-pre-wrap; white-space:-o-pre-wrap; word-wrap:break-word; }
+	-webkit-transition : visibility 0.3s ease, opacity 0.3s ease;
+	 -khtml-transition : visibility 0.3s ease, opacity 0.3s ease;
+	   -moz-transition : visibility 0.3s ease, opacity 0.3s ease;
+		-ms-transition : visibility 0.3s ease, opacity 0.3s ease;
+		 -o-transition : visibility 0.3s ease, opacity 0.3s ease;
+			transition : visibility 0.3s ease, opacity 0.3s ease;
+*/
+.sp-box,
+.sp-box * {
+	-webkit-box-sizing : border-box;
+	 -khtml-box-sizing : border-box;
+	   -moz-box-sizing : border-box;
+	    -ms-box-sizing : border-box;
+	     -o-box-sizing : border-box;
+	        box-sizing : border-box;
+}
+.sp-clear:after { clear:both; content:' '; display:block; font-size:0; height:0; line-height:0; visibility:hidden; }
+.sp-one			{ white-space:nowrap; overflow:hidden; text-overflow:ellipsis; }
+.sp-break		{ white-space:pre-wrap; white-space:-moz-pre-wrap; white-space:-pre-wrap; white-space:-o-pre-wrap; word-wrap:break-word; }
+
+.app-smart-popup {
+	border: none !important;
+	box-shadow: 3px 3px 2px rgba(0,0,0,0.05);
+}
+.app-smart-popup .smart-popup-btns button {
+	height: 35px !important;
+	font-size: 12px !important;
+}
+.app-smart-popup .smart-popup-btns button:first-child {
+	border-left: none !important;
+}
