--- a/sde_design/skin6/_sp/apps/layout/index/index-1/index.css
+++ b/sde_design/skin6/_sp/apps/layout/index/index-1/index.css
@@ -174,6 +174,12 @@ div[layout="sp-layout-fixed"] {width:1200px;}
 .main_event .eventclip li > iframe {
 	width: 100%;
 }
+.main_event .eventclip li a {
+	display: block;
+}
+.main_event .eventclip li a img {
+	width: 100%;
+}
 .main_event .subText {
 	font-family: "roboto", "NanumGothic", Sans-serif;
 	text-align: center;
