- 메인 메뉴 타임세일 추가

--- a/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
+++ b/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
@@ -59,9 +59,11 @@
 			<a><span>쇼핑하기</span></a>
 			<ul>
 				<li><a href="/product/list.html?cate_no=49">제품구매</a></li>
+				<li><a href="/product/list.html?cate_no=60">타임세일</a></li>
                 <li><a href="/product/list.html?cate_no=53">개인결제창</a></li>
 			</ul>
 		</li>
+
 		<li>
 			<a href="/board/product/list.html?board_no=4"><span>구매후기</span></a>
 		</li>
