5월 베스트 리뷰 이벤트

--- a/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
+++ b/sde_design/skin6/_sp/apps/layout/header/mh_header/header.html
@@ -50,7 +50,7 @@
 		<li>
 			<a><span>브랜드</span></a>
 			<ul>
-<!--			<li><a href="/about/zena.html">제나스토리</a></li>-->
+<!--			<li><a href="/about/main.html">제나스토리</a></li>-->
 				<li><a href="/about/life.html">제나라이프</a></li>
 				<li><a href="/about/info.html">원료이야기</a></li>
 			</ul>
