--- a/sde_design/skin6/_sp/apps/layout/panel/panel-1/panel.css
+++ b/sde_design/skin6/_sp/apps/layout/panel/panel-1/panel.css
@@ -30,7 +30,7 @@
 				backface-visibility : hidden;
 	}
 	#sp-panel-design-1.ready:hover {}
-	#sp-panel-design-1 .sp-panel-design-1-btnbox { width:42px; display:block; z-index:2; position:absolute; top:310px; right:100%; }
+	#sp-panel-design-1 .sp-panel-design-1-btnbox { width:42px; display:block; z-index:2; position:absolute; top: 200px; right:100%; }
 	#sp-panel-design-1 .sp-panel-design-1-toggle { width:42px; height:42px; background:transparent url(/_sp/apps/layout/panel/panel-1/panel_package_renew.png) no-repeat -38px 0; }
 	#sp-panel-design-1.ready .sp-panel-design-1-toggle {
 		will-change:right;
@@ -110,13 +110,8 @@
 	#sp-panel-design-1 .sp-panel-design-1-img.sp-icons[theme="deposit"] { background-position:-200px -294px; }
 	#sp-panel-design-1 .sp-panel-design-1-img.sp-icons[theme="delivery"] { background-position:-200px -336px; }
 
-	#sp-panel-design-1 .sp-panel-design-1-scroll { border:0; text-indent:-9999px; position:absolute; width:40px; height:40px; right:100%; bottom:0; margin:0 20px 20px 0; background:transparent url(/_sp/apps/layout/panel/panel-1/panel_package_renew.png) no-repeat 0 -150px; 
-		-webkit-transition : background-position 600ms cubic-bezier(0.970, 0.000, 0.750, 0.750);
-		 -khtml-transition : background-position 600ms cubic-bezier(0.970, 0.000, 0.750, 0.750);
-		   -moz-transition : background-position 600ms cubic-bezier(0.970, 0.000, 0.750, 0.750);
-			-ms-transition : background-position 600ms cubic-bezier(0.970, 0.000, 0.750, 0.750);
-			 -o-transition : background-position 600ms cubic-bezier(0.970, 0.000, 0.750, 0.750);
-				transition : background-position 600ms cubic-bezier(0.970, 0.000, 0.750, 0.750);
+	#sp-panel-design-1 .sp-panel-design-1-scroll {
+		border:0; text-indent:-9999px; position:absolute; width:40px; height:40px; right:100%; bottom:0; margin:0 20px 20px 0; background:transparent url(/_sp/apps/layout/panel/panel-1/panel_package_renew.png) no-repeat 0 -150px;
 	}
 	#sp-panel-design-1.scroll .sp-panel-design-1-scroll { background-position:-40px -150px; }
 	#sp-panel-design-1.scroll .sp-panel-design-1-scroll:hover { background-position:-80px -150px; }
