--- a/sde_design/skin6/css/module/product/380/additional.css
+++ b/sde_design/skin6/css/module/product/380/additional.css
@@ -1,9 +1,9 @@
-.xans-product-additional ul.link { margin:30px 0 11px; border-bottom:1px solid #292929; border-left:0; line-height:1.5; *zoom:1; }
+.xans-product-additional ul.link { margin:30px 0 0; border-bottom:1px solid #4a5164; border-left:0; line-height:1.5; *zoom:1; }
 .xans-product-additional ul.link:after { content:""; display:block; clear:both; }
 .xans-product-additional ul.link li { float:left; width:20%; margin:0 0 0 -1px; border-top:1px solid #cbcdce; }
-.xans-product-additional ul.link li.selected { width:20.3%; }
+.xans-product-additional ul.link li.selected { width:20.33463%; }
 .xans-product-additional ul.link li a { display:block; height:38px; padding:0 15px; border-right:1px solid #cbcdce; border-left:1px solid #cbcdce; color:#757575; line-height:38px; text-decoration:none; text-align:center; background:#f0f2f2; }
-.xans-product-additional ul.link li.selected a { position:relative; top:-1px; margin:0 0 -1px; border:1px solid #292929; color:#fff; font-weight:bold; background:#4a5164; }
+.xans-product-additional ul.link li.selected a { position:relative; top:-1px; margin:0 0 -1px; border:1px solid #292929; color:#fff; border-bottom: none; font-weight:bold; background:#4a5164; }
 .xans-product-additional ul.link li:first-child,
 .xans-product-additional ul.link li.selected:first-child { margin-left:0; }
 .xans-product-additional .cont { color:#353535; line-height:18px; }
