--- a/sde_design/skin6/css/module/board/372/listpackage_12.css
+++ b/sde_design/skin6/css/module/board/372/listpackage_12.css
@@ -37,10 +37,20 @@
 }
 .board.xans-board-listpackage-12 .galleryList li .imgLink img {
 	width: 100%;
-	border: 1px solid #ededed;
+	height: 100%;
+	object-fit: cover;
 }
 .board.xans-board-listpackage-12 .more {
-	position: absolute;
-	top: 0;
-	right: 0;
+	display: block;
+	line-height: 44px;
+	font-size: 16px;
+	font-weight: 600;
+	color: #8d8d8d;
+	text-align: center;
+	border: 1px solid #e6e6e6;
+	transition: 0.2s all ease-in-out;
+}
+.board.xans-board-listpackage-12 .more:hover {
+	color: #5d5d5d;
+	border: 1px solid #c8c8c8;
 }
